# dre-ip-protocol

./: .gitignore  Cargo.toml  README.md
examples/: benchmark.rs  election.json  election_invalid.json  election_malformed.json  run_election.rs
src/: ballots.rs  election.rs  group.rs  groups.rs  lib.rs  p256_impl.rs  pwf.rs
src/group/: p256_impl.rs
src/groups/: p256_impl.rs
