[package]
name = "dre-ip"
version = "0.1.0"
authors = ["Chris Riches"]
edition = "2021"
description = "An implementation of the DRE-ip voting protocol as per the paper by Shahandashti and Hao."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["p256_impl"]
p256_impl = ["sha2", "p256"]

# DEPENDENCIES
[dependencies.p256]
version = "0.10.1"
optional = true
features = ["arithmetic", "ecdsa-core", "ecdsa", "hash2curve"]

[dependencies.rand]
version = "0.8.4"

[dependencies.sha2]
version = "0.9.9"  # Must be compatible with the version used internally by p256.
optional = true
