[package]
name = "dre-ip"
version = "0.1.0"
authors = ["Chris Riches"]
edition = "2021"
description = "An implementation of the DRE-ip voting protocol as per the paper by Shahandashti and Hao."

# VERIFICATION BINARY
[[bin]]
name = "verify-election"
path = "src/bin/verify.rs"
required-features = ["verification"]

# FEATURES
[features]
default = ["p256_impl"]
p256_impl = ["sha2", "p256"]
verification = ["clap", "serde", "serde_json"]

# DEPENDENCIES
[dependencies.clap]
version = "3.0.10"
optional = true
default_features = false
features = ["derive", "std"]

[dependencies.p256]
version = "0.10.1"
optional = true
features = ["arithmetic", "ecdsa-core", "ecdsa", "hash2curve"]

[dependencies.rand]
version = "0.8.4"

[dependencies.serde]
version = "1.0.117"
optional = true

[dependencies.serde_json]
version = "1.0.59"
optional = true

[dependencies.sha2]
version = "0.9.9"  # Must be compatible with the version used internally by p256.
optional = true
